parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     express_statement_error -> EXPRESS LPAREN expression RPAREN
Rule 2     program -> global_declarations
Rule 3     program -> global_declarations main_function
Rule 4     program -> main_function
Rule 5     global_declarations -> global_declaration
Rule 6     global_declarations -> global_declarations global_declaration
Rule 7     global_declaration -> global_variable_declaration
Rule 8     global_declaration -> global_variable_declaration_error
Rule 9     main_function -> GENE LPAREN RPAREN LBRACE statements RBRACE
Rule 10    main_function -> ACT GENE LPAREN RPAREN LBRACE statements RBRACE
Rule 11    statements -> statement
Rule 12    statements -> statements statement
Rule 13    statements -> COMMENT
Rule 14    statements -> statements COMMENT
Rule 15    statements -> express_statement_error
Rule 16    statements -> statements express_statement_error
Rule 17    statements -> variable_declaration_error
Rule 18    statements -> statements variable_declaration_error
Rule 19    statements -> <empty>
Rule 20    statement -> variable_declaration
Rule 21    statement -> express_statement
Rule 22    statement -> COMMENT
Rule 23    express_statement -> EXPRESS LPAREN expression RPAREN SEMICOLON
Rule 24    variable_declaration_error -> LOCAL DOSE SEMICOLON
Rule 25    variable_declaration_error -> LOCAL QUANT SEMICOLON
Rule 26    variable_declaration_error -> LOCAL SEQ SEMICOLON
Rule 27    variable_declaration_error -> LOCAL DOSE EQUALS expression SEMICOLON
Rule 28    variable_declaration_error -> LOCAL QUANT EQUALS expression SEMICOLON
Rule 29    variable_declaration_error -> LOCAL SEQ EQUALS expression SEMICOLON
Rule 30    variable_declaration_error -> LOCAL IDENTIFIER SEMICOLON
Rule 31    variable_declaration_error -> LOCAL IDENTIFIER EQUALS expression SEMICOLON
Rule 32    variable_declaration_error -> DOSE IDENTIFIER SEMICOLON
Rule 33    variable_declaration_error -> QUANT IDENTIFIER SEMICOLON
Rule 34    variable_declaration_error -> SEQ IDENTIFIER SEMICOLON
Rule 35    variable_declaration_error -> LOCAL DOSE IDENTIFIER
Rule 36    variable_declaration_error -> LOCAL QUANT IDENTIFIER
Rule 37    variable_declaration_error -> LOCAL SEQ IDENTIFIER
Rule 38    variable_declaration_error -> GLOBAL DOSE SEMICOLON
Rule 39    variable_declaration_error -> GLOBAL QUANT SEMICOLON
Rule 40    variable_declaration_error -> GLOBAL SEQ SEMICOLON
Rule 41    variable_declaration_error -> GLOBAL DOSE EQUALS expression SEMICOLON
Rule 42    variable_declaration_error -> GLOBAL QUANT EQUALS expression SEMICOLON
Rule 43    variable_declaration_error -> GLOBAL SEQ EQUALS expression SEMICOLON
Rule 44    variable_declaration_error -> GLOBAL IDENTIFIER SEMICOLON
Rule 45    variable_declaration_error -> GLOBAL IDENTIFIER EQUALS expression SEMICOLON
Rule 46    variable_declaration_error -> GLOBAL DOSE IDENTIFIER
Rule 47    variable_declaration_error -> GLOBAL QUANT IDENTIFIER
Rule 48    variable_declaration_error -> GLOBAL SEQ IDENTIFIER
Rule 49    global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON
Rule 50    global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON
Rule 51    global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON
Rule 52    global_variable_declaration -> GLOBAL DOSE IDENTIFIER EQUALS expression SEMICOLON
Rule 53    global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON
Rule 54    global_variable_declaration -> GLOBAL QUANT IDENTIFIER EQUALS expression SEMICOLON
Rule 55    global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON
Rule 56    global_variable_declaration -> GLOBAL SEQ IDENTIFIER EQUALS expression SEMICOLON
Rule 57    global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON
Rule 58    variable_declaration -> LOCAL DOSE IDENTIFIER EQUALS expression SEMICOLON
Rule 59    variable_declaration -> LOCAL DOSE IDENTIFIER SEMICOLON
Rule 60    variable_declaration -> LOCAL QUANT IDENTIFIER EQUALS expression SEMICOLON
Rule 61    variable_declaration -> LOCAL QUANT IDENTIFIER SEMICOLON
Rule 62    variable_declaration -> LOCAL SEQ IDENTIFIER EQUALS expression SEMICOLON
Rule 63    variable_declaration -> LOCAL SEQ IDENTIFIER SEMICOLON
Rule 64    expression -> IDENTIFIER
Rule 65    expression -> NUMLIT
Rule 66    expression -> QUANTLITERAL
Rule 67    expression -> MINUS NUMLIT
Rule 68    expression -> expression PLUS expression
Rule 69    expression -> expression MINUS expression
Rule 70    expression -> LPAREN expression RPAREN

Terminals, with rules where they appear

ACT                  : 10
COMMENT              : 13 14 22
DOSE                 : 24 27 32 35 38 41 46 49 52 53 58 59
EQUALS               : 27 28 29 31 41 42 43 45 52 54 56 58 60 62
EXPRESS              : 1 23
GENE                 : 9 10
GLOBAL               : 38 39 40 41 42 43 44 45 46 47 48 52 53 54 55 56 57
IDENTIFIER           : 30 31 32 33 34 35 36 37 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
LBRACE               : 9 10
LOCAL                : 24 25 26 27 28 29 30 31 35 36 37 58 59 60 61 62 63
LPAREN               : 1 9 10 23 70
MINUS                : 67 69
NUMLIT               : 65 67
PLUS                 : 68
QUANT                : 25 28 33 36 39 42 47 50 54 55 60 61
QUANTLITERAL         : 66
RBRACE               : 9 10
RPAREN               : 1 9 10 23 70
SEMICOLON            : 23 24 25 26 27 28 29 30 31 32 33 34 38 39 40 41 42 43 44 45 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
SEQ                  : 26 29 34 37 40 43 48 51 56 57 62 63
error                : 

Nonterminals, with rules where they appear

express_statement    : 21
express_statement_error : 15 16
expression           : 1 23 27 28 29 31 41 42 43 45 52 54 56 58 60 62 68 68 69 69 70
global_declaration   : 5 6
global_declarations  : 2 3 6
global_variable_declaration : 7
global_variable_declaration_error : 8
main_function        : 3 4
program              : 0
statement            : 11 12
statements           : 9 10 12 14 16 18
variable_declaration : 20
variable_declaration_error : 17 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . global_declarations
    (3) program -> . global_declarations main_function
    (4) program -> . main_function
    (5) global_declarations -> . global_declaration
    (6) global_declarations -> . global_declarations global_declaration
    (9) main_function -> . GENE LPAREN RPAREN LBRACE statements RBRACE
    (10) main_function -> . ACT GENE LPAREN RPAREN LBRACE statements RBRACE
    (7) global_declaration -> . global_variable_declaration
    (8) global_declaration -> . global_variable_declaration_error
    (52) global_variable_declaration -> . GLOBAL DOSE IDENTIFIER EQUALS expression SEMICOLON
    (53) global_variable_declaration -> . GLOBAL DOSE IDENTIFIER SEMICOLON
    (54) global_variable_declaration -> . GLOBAL QUANT IDENTIFIER EQUALS expression SEMICOLON
    (55) global_variable_declaration -> . GLOBAL QUANT IDENTIFIER SEMICOLON
    (56) global_variable_declaration -> . GLOBAL SEQ IDENTIFIER EQUALS expression SEMICOLON
    (57) global_variable_declaration -> . GLOBAL SEQ IDENTIFIER SEMICOLON
    (49) global_variable_declaration_error -> . DOSE IDENTIFIER SEMICOLON
    (50) global_variable_declaration_error -> . QUANT IDENTIFIER SEMICOLON
    (51) global_variable_declaration_error -> . SEQ IDENTIFIER SEMICOLON

    GENE            shift and go to state 5
    ACT             shift and go to state 6
    GLOBAL          shift and go to state 9
    DOSE            shift and go to state 10
    QUANT           shift and go to state 11
    SEQ             shift and go to state 12

    program                        shift and go to state 1
    global_declarations            shift and go to state 2
    main_function                  shift and go to state 3
    global_declaration             shift and go to state 4
    global_variable_declaration    shift and go to state 7
    global_variable_declaration_error shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (2) program -> global_declarations .
    (3) program -> global_declarations . main_function
    (6) global_declarations -> global_declarations . global_declaration
    (9) main_function -> . GENE LPAREN RPAREN LBRACE statements RBRACE
    (10) main_function -> . ACT GENE LPAREN RPAREN LBRACE statements RBRACE
    (7) global_declaration -> . global_variable_declaration
    (8) global_declaration -> . global_variable_declaration_error
    (52) global_variable_declaration -> . GLOBAL DOSE IDENTIFIER EQUALS expression SEMICOLON
    (53) global_variable_declaration -> . GLOBAL DOSE IDENTIFIER SEMICOLON
    (54) global_variable_declaration -> . GLOBAL QUANT IDENTIFIER EQUALS expression SEMICOLON
    (55) global_variable_declaration -> . GLOBAL QUANT IDENTIFIER SEMICOLON
    (56) global_variable_declaration -> . GLOBAL SEQ IDENTIFIER EQUALS expression SEMICOLON
    (57) global_variable_declaration -> . GLOBAL SEQ IDENTIFIER SEMICOLON
    (49) global_variable_declaration_error -> . DOSE IDENTIFIER SEMICOLON
    (50) global_variable_declaration_error -> . QUANT IDENTIFIER SEMICOLON
    (51) global_variable_declaration_error -> . SEQ IDENTIFIER SEMICOLON

    $end            reduce using rule 2 (program -> global_declarations .)
    GENE            shift and go to state 5
    ACT             shift and go to state 6
    GLOBAL          shift and go to state 9
    DOSE            shift and go to state 10
    QUANT           shift and go to state 11
    SEQ             shift and go to state 12

    main_function                  shift and go to state 13
    global_declaration             shift and go to state 14
    global_variable_declaration    shift and go to state 7
    global_variable_declaration_error shift and go to state 8

state 3

    (4) program -> main_function .

    $end            reduce using rule 4 (program -> main_function .)


state 4

    (5) global_declarations -> global_declaration .

    GENE            reduce using rule 5 (global_declarations -> global_declaration .)
    ACT             reduce using rule 5 (global_declarations -> global_declaration .)
    GLOBAL          reduce using rule 5 (global_declarations -> global_declaration .)
    DOSE            reduce using rule 5 (global_declarations -> global_declaration .)
    QUANT           reduce using rule 5 (global_declarations -> global_declaration .)
    SEQ             reduce using rule 5 (global_declarations -> global_declaration .)
    $end            reduce using rule 5 (global_declarations -> global_declaration .)


state 5

    (9) main_function -> GENE . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 15


state 6

    (10) main_function -> ACT . GENE LPAREN RPAREN LBRACE statements RBRACE

    GENE            shift and go to state 16


state 7

    (7) global_declaration -> global_variable_declaration .

    GENE            reduce using rule 7 (global_declaration -> global_variable_declaration .)
    ACT             reduce using rule 7 (global_declaration -> global_variable_declaration .)
    GLOBAL          reduce using rule 7 (global_declaration -> global_variable_declaration .)
    DOSE            reduce using rule 7 (global_declaration -> global_variable_declaration .)
    QUANT           reduce using rule 7 (global_declaration -> global_variable_declaration .)
    SEQ             reduce using rule 7 (global_declaration -> global_variable_declaration .)
    $end            reduce using rule 7 (global_declaration -> global_variable_declaration .)


state 8

    (8) global_declaration -> global_variable_declaration_error .

    GENE            reduce using rule 8 (global_declaration -> global_variable_declaration_error .)
    ACT             reduce using rule 8 (global_declaration -> global_variable_declaration_error .)
    GLOBAL          reduce using rule 8 (global_declaration -> global_variable_declaration_error .)
    DOSE            reduce using rule 8 (global_declaration -> global_variable_declaration_error .)
    QUANT           reduce using rule 8 (global_declaration -> global_variable_declaration_error .)
    SEQ             reduce using rule 8 (global_declaration -> global_variable_declaration_error .)
    $end            reduce using rule 8 (global_declaration -> global_variable_declaration_error .)


state 9

    (52) global_variable_declaration -> GLOBAL . DOSE IDENTIFIER EQUALS expression SEMICOLON
    (53) global_variable_declaration -> GLOBAL . DOSE IDENTIFIER SEMICOLON
    (54) global_variable_declaration -> GLOBAL . QUANT IDENTIFIER EQUALS expression SEMICOLON
    (55) global_variable_declaration -> GLOBAL . QUANT IDENTIFIER SEMICOLON
    (56) global_variable_declaration -> GLOBAL . SEQ IDENTIFIER EQUALS expression SEMICOLON
    (57) global_variable_declaration -> GLOBAL . SEQ IDENTIFIER SEMICOLON

    DOSE            shift and go to state 17
    QUANT           shift and go to state 18
    SEQ             shift and go to state 19


state 10

    (49) global_variable_declaration_error -> DOSE . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 20


state 11

    (50) global_variable_declaration_error -> QUANT . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 21


state 12

    (51) global_variable_declaration_error -> SEQ . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 22


state 13

    (3) program -> global_declarations main_function .

    $end            reduce using rule 3 (program -> global_declarations main_function .)


state 14

    (6) global_declarations -> global_declarations global_declaration .

    GENE            reduce using rule 6 (global_declarations -> global_declarations global_declaration .)
    ACT             reduce using rule 6 (global_declarations -> global_declarations global_declaration .)
    GLOBAL          reduce using rule 6 (global_declarations -> global_declarations global_declaration .)
    DOSE            reduce using rule 6 (global_declarations -> global_declarations global_declaration .)
    QUANT           reduce using rule 6 (global_declarations -> global_declarations global_declaration .)
    SEQ             reduce using rule 6 (global_declarations -> global_declarations global_declaration .)
    $end            reduce using rule 6 (global_declarations -> global_declarations global_declaration .)


state 15

    (9) main_function -> GENE LPAREN . RPAREN LBRACE statements RBRACE

    RPAREN          shift and go to state 23


state 16

    (10) main_function -> ACT GENE . LPAREN RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 24


state 17

    (52) global_variable_declaration -> GLOBAL DOSE . IDENTIFIER EQUALS expression SEMICOLON
    (53) global_variable_declaration -> GLOBAL DOSE . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 25


state 18

    (54) global_variable_declaration -> GLOBAL QUANT . IDENTIFIER EQUALS expression SEMICOLON
    (55) global_variable_declaration -> GLOBAL QUANT . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 26


state 19

    (56) global_variable_declaration -> GLOBAL SEQ . IDENTIFIER EQUALS expression SEMICOLON
    (57) global_variable_declaration -> GLOBAL SEQ . IDENTIFIER SEMICOLON

    IDENTIFIER      shift and go to state 27


state 20

    (49) global_variable_declaration_error -> DOSE IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 28


state 21

    (50) global_variable_declaration_error -> QUANT IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 29


state 22

    (51) global_variable_declaration_error -> SEQ IDENTIFIER . SEMICOLON

    SEMICOLON       shift and go to state 30


state 23

    (9) main_function -> GENE LPAREN RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 31


state 24

    (10) main_function -> ACT GENE LPAREN . RPAREN LBRACE statements RBRACE

    RPAREN          shift and go to state 32


state 25

    (52) global_variable_declaration -> GLOBAL DOSE IDENTIFIER . EQUALS expression SEMICOLON
    (53) global_variable_declaration -> GLOBAL DOSE IDENTIFIER . SEMICOLON

    EQUALS          shift and go to state 33
    SEMICOLON       shift and go to state 34


state 26

    (54) global_variable_declaration -> GLOBAL QUANT IDENTIFIER . EQUALS expression SEMICOLON
    (55) global_variable_declaration -> GLOBAL QUANT IDENTIFIER . SEMICOLON

    EQUALS          shift and go to state 35
    SEMICOLON       shift and go to state 36


state 27

    (56) global_variable_declaration -> GLOBAL SEQ IDENTIFIER . EQUALS expression SEMICOLON
    (57) global_variable_declaration -> GLOBAL SEQ IDENTIFIER . SEMICOLON

    EQUALS          shift and go to state 37
    SEMICOLON       shift and go to state 38


state 28

    (49) global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .

    GENE            reduce using rule 49 (global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .)
    ACT             reduce using rule 49 (global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .)
    GLOBAL          reduce using rule 49 (global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .)
    DOSE            reduce using rule 49 (global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .)
    QUANT           reduce using rule 49 (global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .)
    SEQ             reduce using rule 49 (global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .)
    $end            reduce using rule 49 (global_variable_declaration_error -> DOSE IDENTIFIER SEMICOLON .)


state 29

    (50) global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .

    GENE            reduce using rule 50 (global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .)
    ACT             reduce using rule 50 (global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .)
    GLOBAL          reduce using rule 50 (global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .)
    DOSE            reduce using rule 50 (global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .)
    QUANT           reduce using rule 50 (global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .)
    SEQ             reduce using rule 50 (global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .)
    $end            reduce using rule 50 (global_variable_declaration_error -> QUANT IDENTIFIER SEMICOLON .)


state 30

    (51) global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .

    GENE            reduce using rule 51 (global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .)
    ACT             reduce using rule 51 (global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .)
    GLOBAL          reduce using rule 51 (global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .)
    DOSE            reduce using rule 51 (global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .)
    QUANT           reduce using rule 51 (global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .)
    SEQ             reduce using rule 51 (global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .)
    $end            reduce using rule 51 (global_variable_declaration_error -> SEQ IDENTIFIER SEMICOLON .)


state 31

    (9) main_function -> GENE LPAREN RPAREN LBRACE . statements RBRACE
    (11) statements -> . statement
    (12) statements -> . statements statement
    (13) statements -> . COMMENT
    (14) statements -> . statements COMMENT
    (15) statements -> . express_statement_error
    (16) statements -> . statements express_statement_error
    (17) statements -> . variable_declaration_error
    (18) statements -> . statements variable_declaration_error
    (19) statements -> .
    (20) statement -> . variable_declaration
    (21) statement -> . express_statement
    (22) statement -> . COMMENT
    (1) express_statement_error -> . EXPRESS LPAREN expression RPAREN
    (24) variable_declaration_error -> . LOCAL DOSE SEMICOLON
    (25) variable_declaration_error -> . LOCAL QUANT SEMICOLON
    (26) variable_declaration_error -> . LOCAL SEQ SEMICOLON
    (27) variable_declaration_error -> . LOCAL DOSE EQUALS expression SEMICOLON
    (28) variable_declaration_error -> . LOCAL QUANT EQUALS expression SEMICOLON
    (29) variable_declaration_error -> . LOCAL SEQ EQUALS expression SEMICOLON
    (30) variable_declaration_error -> . LOCAL IDENTIFIER SEMICOLON
    (31) variable_declaration_error -> . LOCAL IDENTIFIER EQUALS expression SEMICOLON
    (32) variable_declaration_error -> . DOSE IDENTIFIER SEMICOLON
    (33) variable_declaration_error -> . QUANT IDENTIFIER SEMICOLON
    (34) variable_declaration_error -> . SEQ IDENTIFIER SEMICOLON
    (35) variable_declaration_error -> . LOCAL DOSE IDENTIFIER
    (36) variable_declaration_error -> . LOCAL QUANT IDENTIFIER
    (37) variable_declaration_error -> . LOCAL SEQ IDENTIFIER
    (38) variable_declaration_error -> . GLOBAL DOSE SEMICOLON
    (39) variable_declaration_error -> . GLOBAL QUANT SEMICOLON
    (40) variable_declaration_error -> . GLOBAL SEQ SEMICOLON
    (41) variable_declaration_error -> . GLOBAL DOSE EQUALS expression SEMICOLON
    (42) variable_declaration_error -> . GLOBAL QUANT EQUALS expression SEMICOLON
    (43) variable_declaration_error -> . GLOBAL SEQ EQUALS expression SEMICOLON
    (44) variable_declaration_error -> . GLOBAL IDENTIFIER SEMICOLON
    (45) variable_declaration_error -> . GLOBAL IDENTIFIER EQUALS expression SEMICOLON
    (46) variable_declaration_error -> . GLOBAL DOSE IDENTIFIER
    (47) variable_declaration_error -> . GLOBAL QUANT IDENTIFIER
    (48) variable_declaration_error -> . GLOBAL SEQ IDENTIFIER
    (58) variable_declaration -> . LOCAL DOSE IDENTIFIER EQUALS expression SEMICOLON
    (59) variable_declaration -> . LOCAL DOSE IDENTIFIER SEMICOLON
    (60) variable_declaration -> . LOCAL QUANT IDENTIFIER EQUALS expression SEMICOLON
    (61) variable_declaration -> . LOCAL QUANT IDENTIFIER SEMICOLON
    (62) variable_declaration -> . LOCAL SEQ IDENTIFIER EQUALS expression SEMICOLON
    (63) variable_declaration -> . LOCAL SEQ IDENTIFIER SEMICOLON
    (23) express_statement -> . EXPRESS LPAREN expression RPAREN SEMICOLON

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for EXPRESS resolved as shift
  ! shift/reduce conflict for LOCAL resolved as shift
  ! shift/reduce conflict for DOSE resolved as shift
  ! shift/reduce conflict for QUANT resolved as shift
  ! shift/reduce conflict for SEQ resolved as shift
  ! shift/reduce conflict for GLOBAL resolved as shift
    COMMENT         shift and go to state 41
    RBRACE          reduce using rule 19 (statements -> .)
    EXPRESS         shift and go to state 46
    LOCAL           shift and go to state 47
    DOSE            shift and go to state 48
    QUANT           shift and go to state 49
    SEQ             shift and go to state 50
    GLOBAL          shift and go to state 51

  ! COMMENT         [ reduce using rule 19 (statements -> .) ]
  ! EXPRESS         [ reduce using rule 19 (statements -> .) ]
  ! LOCAL           [ reduce using rule 19 (statements -> .) ]
  ! DOSE            [ reduce using rule 19 (statements -> .) ]
  ! QUANT           [ reduce using rule 19 (statements -> .) ]
  ! SEQ             [ reduce using rule 19 (statements -> .) ]
  ! GLOBAL          [ reduce using rule 19 (statements -> .) ]

    statements                     shift and go to state 39
    statement                      shift and go to state 40
    express_statement_error        shift and go to state 42
    variable_declaration_error     shift and go to state 43
    variable_declaration           shift and go to state 44
    express_statement              shift and go to state 45

state 32

    (10) main_function -> ACT GENE LPAREN RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 52


state 33

    (52) global_variable_declaration -> GLOBAL DOSE IDENTIFIER EQUALS . expression SEMICOLON
    (64) expression -> . IDENTIFIER
    (65) expression -> . NUMLIT
    (66) expression -> . QUANTLITERAL
    (67) expression -> . MINUS NUMLIT
    (68) expression -> . expression PLUS expression
    (69) expression -> . expression MINUS expression
    (70) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 53
    NUMLIT          shift and go to state 55
    QUANTLITERAL    shift and go to state 56
    MINUS           shift and go to state 57
    LPAREN          shift and go to state 58

    expression                     shift and go to state 54

state 34

    (53) global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .

    GENE            reduce using rule 53 (global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .)
    ACT             reduce using rule 53 (global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .)
    GLOBAL          reduce using rule 53 (global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .)
    DOSE            reduce using rule 53 (global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .)
    QUANT           reduce using rule 53 (global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .)
    SEQ             reduce using rule 53 (global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .)
    $end            reduce using rule 53 (global_variable_declaration -> GLOBAL DOSE IDENTIFIER SEMICOLON .)


state 35

    (54) global_variable_declaration -> GLOBAL QUANT IDENTIFIER EQUALS . expression SEMICOLON
    (64) expression -> . IDENTIFIER
    (65) expression -> . NUMLIT
    (66) expression -> . QUANTLITERAL
    (67) expression -> . MINUS NUMLIT
    (68) expression -> . expression PLUS expression
    (69) expression -> . expression MINUS expression
    (70) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 53
    NUMLIT          shift and go to state 55
    QUANTLITERAL    shift and go to state 56
    MINUS           shift and go to state 57
    LPAREN          shift and go to state 58

    expression                     shift and go to state 59

state 36

    (55) global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .

    GENE            reduce using rule 55 (global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .)
    ACT             reduce using rule 55 (global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .)
    GLOBAL          reduce using rule 55 (global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .)
    DOSE            reduce using rule 55 (global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .)
    QUANT           reduce using rule 55 (global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .)
    SEQ             reduce using rule 55 (global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .)
    $end            reduce using rule 55 (global_variable_declaration -> GLOBAL QUANT IDENTIFIER SEMICOLON .)


state 37

    (56) global_variable_declaration -> GLOBAL SEQ IDENTIFIER EQUALS . expression SEMICOLON
    (64) expression -> . IDENTIFIER
    (65) expression -> . NUMLIT
    (66) expression -> . QUANTLITERAL
    (67) expression -> . MINUS NUMLIT
    (68) expression -> . expression PLUS expression
    (69) expression -> . expression MINUS expression
    (70) expression -> . LPAREN expression RPAREN

    IDENTIFIER      shift and go to state 53
    NUMLIT          shift and go to state 55
    QUANTLITERAL    shift and go to state 56
    MINUS           shift and go to state 57
    LPAREN          shift and go to state 58

    expression                     shift and go to state 60

state 38

    (57) global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .

    GENE            reduce using rule 57 (global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .)
    ACT             reduce using rule 57 (global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .)
    GLOBAL          reduce using rule 57 (global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .)
    DOSE            reduce using rule 57 (global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .)
    QUANT           reduce using rule 57 (global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .)
    SEQ             reduce using rule 57 (global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .)
    $end            reduce using rule 57 (global_variable_declaration -> GLOBAL SEQ IDENTIFIER SEMICOLON .)


state 39

    (9) main_function -> GENE LPAREN RPAREN LBRACE statements . RBRACE
    (12) statements -> statements . statement
    (14) statements -> statements . COMMENT
    (16) statements -> statements . express_statement_error
    (18) statements -> statements . variable_declaration_error
    (20) statement -> . variable_declaration
    (21) statement -> . express_statement
    (22) statement -> . COMMENT
    (1) express_statement_error -> . EXPRESS LPAREN expression RPAREN
    (24) variable_declaration_error -> . LOCAL DOSE SEMICOLON
    (25) variable_declaration_error -> . LOCAL QUANT SEMICOLON
    (26) variable_declaration_error -> . LOCAL SEQ SEMICOLON
    (27) variable_declaration_error -> . LOCAL DOSE EQUALS expression SEMICOLON
    (28) variable_declaration_error -> . LOCAL QUANT EQUALS expression SEMICOLON
    (29) variable_declaration_error -> . LOCAL SEQ EQUALS expression SEMICOLON
    (30) variable_declaration_error -> . LOCAL IDENTIFIER SEMICOLON
    (31) variable_declaration_error -> . LOCAL IDENTIFIER EQUALS expression SEMICOLON
    (32) variable_declaration_error -> . DOSE IDENTIFIER SEMICOLON
    (33) variable_declaration_error -> . QUANT IDENTIFIER SEMICOLON
    (34) variable_declaration_error -> . SEQ IDENTIFIER SEMICOLON
    (35) variable_declaration_error -> . LOCAL DOSE IDENTIFIER
    (36) variable_declaration_error -> . LOCAL QUANT IDENTIFIER
    (37) variable_declaration_error -> . LOCAL SEQ IDENTIFIER
    (38) variable_declaration_error -> . GLOBAL DOSE SEMICOLON
    (39) variable_declaration_error -> . GLOBAL QUANT SEMICOLON
    (40) variable_declaration_error -> . GLOBAL SEQ SEMICOLON
    (41) variable_declaration_error -> . GLOBAL DOSE EQUALS expression SEMICOLON
    (42) variable_declaration_error -> . GLOBAL QUANT EQUALS expression SEMICOLON
    (43) variable_declaration_error -> . GLOBAL SEQ EQUALS expression SEMICOLON
    (44) variable_declaration_error -> . GLOBAL IDENTIFIER SEMICOLON
    (45) variable_declaration_error -> . GLOBAL IDENTIFIER EQUALS expression SEMICOLON
    (46) variable_declaration_error -> . GLOBAL DOSE IDENTIFIER
    (47) variable_declaration_error -> . GLOBAL QUANT IDENTIFIER
    (48) variable_declaration_error -> . GLOBAL SEQ IDENTIFIER
    (58) variable_declaration -> . LOCAL DOSE IDENTIFIER EQUALS expression SEMICOLON
    (59) variable_declaration -> . LOCAL DOSE IDENTIFIER SEMICOLON
    (60) variable_declaration -> . LOCAL QUANT IDENTIFIER EQUALS expression SEMICOLON
    (61) variable_declaration -> . LOCAL QUANT IDENTIFIER SEMICOLON
    (62) variable_declaration -> . LOCAL SEQ IDENTIFIER EQUALS expression SEMICOLON
    (63) variable_declaration -> . LOCAL SEQ IDENTIFIER SEMICOLON
    (23) express_statement -> . EXPRESS LPAREN expression RPAREN SEMICOLON

    RBRACE          shift and go to state 61
    COMMENT         shift and go to state 63
    EXPRESS         shift and go to state 46
    LOCAL           shift and go to state 47
    DOSE            shift and go to state 48
    QUANT           shift and go to state 49
    SEQ             shift and go to state 50
    GLOBAL          shift and go to state 51

    statement                      shift and go to state 62
    express_statement_error        shift and go to state 64
    variable_declaration_error     shift and go to state 65
    variable_declaration           shift and go to state 44
    express_statement              shift and go to state 45

state 40

    (11) statements -> statement .

    RBRACE          reduce using rule 11 (statements -> statement .)
    COMMENT         reduce using rule 11 (statements -> statement .)
    EXPRESS         reduce using rule 11 (statements -> statement .)
    LOCAL           reduce using rule 11 (statements -> statement .)
    DOSE            reduce using rule 11 (statements -> statement .)
    QUANT           reduce using rule 11 (statements -> statement .)
    SEQ             reduce using rule 11 (statements -> statement .)
    GLOBAL          reduce using rule 11 (statements -> statement .)


state 41

    (13) statements -> COMMENT .
    (22) statement -> COMMENT .
